force-app/main/default/objects/Time_Billing__c/fields/Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner__c</fullName>
    <formula>Account__r.Owner.FirstName &amp; &quot; &quot; &amp; Account__r.Owner.LastName</formula>
    <label>Account Owner</label>
    <type>Text</type>
</CustomField>