force-app/main/default/objects/Time_Billing__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Time Billings</relationshipLabel>
    <relationshipName>Time_Billings</relationshipName>
    <type>Lookup</type>
</CustomField>