force-app/main/default/objects/Time_Billing__c/fields/Latest_Recalc_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Recalc_Date__c</fullName>
    <label>Latest Recalc Date</label>
    <type>DateTime</type>
</CustomField>