force-app/main/default/objects/Time_Billing__c/fields/NetSuite_Invoice_Link__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Invoice_Link__c</fullName>
    <label>NetSuite Invoice Link</label>
    <type>Url</type>
</CustomField>