force-app/main/default/objects/Time_Billing__c/fields/Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Time Billings</relationshipLabel>
    <relationshipName>Time_Billings</relationshipName>
    <type>Lookup</type>
</CustomField>